@@ -1188,5 +1188,7 @@ $LANG_CONF['main.customPdfHeader'] = array('area', 'Eigener PDF Header (HTML erl
 $LANG_CONF['main.customPdfFooter'] = array('area', 'Eigener PDF Footer (HTML erlaubt)');
 $LANG_CONF['records.allowDownloadsForGuests'] = array('checkbox', 'Erlaube Downloads von Gästen<br>(Standard: deaktiviert)');
 $PMF_LANG["ad_msgNoteAboutPasswords"] = "Achtung! Beim Ausfüllen der Passwortfelder überschreiben Sie die Passwörter des Benutzers.";
-$PM_LANG["ad_delete_all_votings"] = "Alle Bewertungen löschen";
+$PMF_LANG["ad_delete_all_votings"] = "Alle Bewertungen löschen";
 $PMF_LANG["ad_categ_moderator"] = "Moderatoren";
+$PMF_LANG['ad_clear_all_visits'] = "Alle Besuche zurücksetzen";
+$PMF_LANG['ad_reset_visits_success'] = 'Die Besuche wurden erfolgreich zurückgesetzt';
